@@ -1,6 +1,9 @@
 Version 4.1.6
-- Support more Spin2 operators
+- Added FILENAME_MAX to stdio.h
+- Added some missing functions to libc.a
 - Fixed a typo in implementation of rqpin
+- Fixed BASIC instrrev function
+- Supported more Spin2 operators
 
 Version 4.1.5
 - Suppressed optimization of inline assembly inside ORG/END (but not ASM/ENDASM)
